# wireguard-gui

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs  install.sh  minisign.pub
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: DISTROS.md  RELEASES.md  TUTORIAL.md  help.md
packaging/: 49-wireguard-gui.rules  PACKAGING.md  wg-helper  wireguard-gui.desktop
packaging/apk/: APKBUILD
packaging/aur/: PKGBUILD
packaging/flatpak/: io.github.JamilleJung.WireguardGui.yaml
packaging/rpm/: wireguard-gui.spec
packaging/void/: template
src/: backend.rs  clipboard.rs  config.rs  create.rs  doctor.rs  main.rs  update.rs  validation.rs
src/ui_bridge/: editor_form.rs  mod.rs
tests/: installer-sanity.sh
ui/: app.slint
ui/components/: statusdot.slint
