[package]
name = "wireguard-gui"
version = "1.6.9"
edition = "2024"
description = "A native Linux GUI for managing plain WireGuard tunnels with wg and wg-quick."
license = "MIT"
repository = "https://github.com/JamilleJung/wireguard-gui"
readme = "README.md"
default-run = "wireguard-gui"

[[bin]]
name = "wireguard-gui"
path = "src/main.rs"

[[bin]]
name = "wg-helper"
path = "src/bin/wg-helper.rs"

[dependencies]
slint = "1"
rfd = "0.17"
libc = "0.2"
zip = { version = "8", default-features = false, features = ["deflate"] }
qrcode = { version = "0.14", default-features = false }
rqrr = "0.10"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
arboard = "3"
ksni = { version = "0.3", features = ["blocking"] }

[build-dependencies]
slint-build = "1"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"

# `cargo deb` packaging — installs to /usr and uses the polkit rule for auth.
[package.metadata.deb]
maintainer = "jamillejung <izeystudio@gmail.com>"
copyright = "2026 wireguard-gui contributors"
license-file = ["LICENSE", "0"]
section = "net"
priority = "optional"
extended-description = "A native Linux GUI for managing plain WireGuard tunnels through wg and wg-quick: tunnel list, live status, activate/deactivate, import, QR, editing with validation, and a small privileged helper."
depends = "$auto, wireguard-tools, libfontconfig1, libxkbcommon0, libgl1, libegl1, libdbus-1-3, polkit-1 | policykit-1"
assets = [
    ["target/release/wireguard-gui", "usr/bin/", "755"],
    ["target/release/wg-helper", "usr/lib/wireguard-gui/wg-helper", "755"],
    ["packaging/wireguard-gui.desktop", "usr/share/applications/", "644"],
    ["packaging/wireguard-gui.svg", "usr/share/icons/hicolor/scalable/apps/", "644"],
    ["packaging/49-wireguard-gui.rules", "etc/polkit-1/rules.d/", "644"],
    ["README.md", "usr/share/doc/wireguard-gui/README.md", "644"],
]
